Added animation effects and styling to the login page

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,11 @@ block content
   //p Welcome to #{title}
   div.title-box
     h1.the-word The
-    svg.title-svg
+    //svg.title-svg
         rect(class='first-one one')
         circle(class='zero')
         rect(class='second-one one')
+    div#street.street-word
     h1.investor-word Investor
   div.login-box
     form(action='/login' method='POST')
